--- a/Study-Time-RecordTK.htm
+++ b/Study-Time-RecordTK.htm
@@ -186,7 +186,7 @@
   <button onclick="endStudy()">終了</button>
 
   <div id="log"></div>
-<audio id="cheer-audio" src="Cheer-Crowd02-2(Mid).mp3"></audio>
+<audio id="cheer-audio" src="Cheer-Crowd02-2Mid.mp3"></audio>
   <div>
     <hr> 
   
